# microcount-rs

./: .gitignore  Cargo.toml  out.tiff  out1.tiff  out2.tiff
src/: algorithm.rs  component.rs  controller.rs  main.rs  message.rs  model.rs  page.rs  view.rs
src/algorithm/: binary.rs  helpers.rs  microcount.rs  mod.rs  proc.rs  regions.rs
src/component/: home.rs  navigator.rs  register.rs  select_images.rs
src/concurrency/: mod.rs  threadpool.rs
src/controller/: home_controller.rs  register_controller.rs  select_images_controller.rs
src/data/: image_metadata.rs  model.rs  workspace.rs
src/message/: message.rs
src/model/: atlas.rs  constants.rs  image_metadata.rs  mod.rs  model.rs  workspace.rs
src/page/: register.rs  select_images.rs
src/utility/: imops.rs  io.rs  mod.rs  types.rs
src/view/: home_view.rs  register_view.rs  select_images_view.rs
